@@ -118,7 +118,7 @@ public final class TownySQLSource extends TownyDatabaseHandler {
 		 * Register the driver (if possible)
 		 */
 		try {
-			Driver driver = (Driver) Class.forName("com.mysql.jdbc.Driver").newInstance();
+			Driver driver = (Driver) Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
 			DriverManager.registerDriver(driver);
 		} catch (Exception e) {
 			System.out.println("[Towny] Driver error: " + e);
@@ -805,7 +805,9 @@ public final class TownySQLSource extends TownyDatabaseHandler {
 					search = (line.contains("#")) ? "#" : ",";
 					List<Resident> friends = getResidents(line.split(search));
 					for (Resident friend : friends) {
-						resident.addFriend(friend);
+						try {
+							resident.addFriend(friend);
+						} catch (AlreadyRegisteredException ignored) {}
 					}
 				}
 			} catch (Exception e) {
@@ -964,6 +966,7 @@ public final class TownySQLSource extends TownyDatabaseHandler {
 			town.setAdminDisabledPVP(rs.getBoolean("admindisabledpvp"));
 			town.setAdminEnabledPVP(rs.getBoolean("adminenabledpvp"));
 			town.setJoinedNationAt(rs.getLong("joinedNationAt"));
+			town.setMovedHomeBlockAt(rs.getLong("movedHomeBlockAt"));
 
 			town.setPurchasedBlocks(rs.getInt("purchased"));
 			
@@ -2035,6 +2038,7 @@ public final class TownySQLSource extends TownyDatabaseHandler {
 			twn_hm.put("admindisabledpvp", town.isAdminDisabledPVP());
 			twn_hm.put("adminenabledpvp", town.isAdminEnabledPVP());
 			twn_hm.put("joinedNationAt", town.getJoinedNationAt());
+			twn_hm.put("movedHomeBlockAt", town.getMovedHomeBlockAt());
 			if (town.hasMeta())
 				twn_hm.put("metadata", serializeMetadata(town));
 			else
